fixed logo font + title features align

--- a/css/main.css
+++ b/css/main.css
@@ -401,7 +401,7 @@ textarea {
   display: inline-block;
   padding-top: 16px;
   padding-bottom: 16px;
-  font-family: "Roboto", sans-serif;
+  font-family: "Raleway", sans-serif;
   font-weight: 700;
   font-size: 24px;
   line-height: 1.17;
@@ -787,7 +787,6 @@ textarea {
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
-  text-align: center;
   text-transform: uppercase;
 }
 .features-list__caption {
