--- a/sass/mobile/_features.scss
+++ b/sass/mobile/_features.scss
@@ -49,7 +49,6 @@
     font-weight: 700;
     font-size: 14px;
     line-height: 1.14;
-    text-align: center;
     text-transform: uppercase;
   }
 
