--- a/sass/mobile/_logo.scss
+++ b/sass/mobile/_logo.scss
@@ -12,7 +12,7 @@
     padding-bottom: 26px;
   }
 
-  font-family: $main-font;
+  font-family: $logo-font;
   font-weight: 700;
 
   font-size: 24px;
